--- a/Deployment.yml
+++ b/Deployment.yml
@@ -2,33 +2,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: ecommstoreappdeployment
+ name: ecomm_store
+ labels:
+   app: ecomm_store
 spec:
  replicas: 1
  selector:
    matchLabels:
-     app: ecommstore
+     app: ecomm_store
  template:
   metadata:
-   name: ecommstore
+   name: ecomm_store
    labels:
-     app: ecommstore
+     app: ecomm_store
   spec:
     containers:
-    - name: ecommstorecontainer
-      image: sanjayk062/ecomm_store
+    - name: ecomm_store
+      image: sanjayk062/ecomm_store:latest
       ports:
       - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: ecommstoresvc
+ name: ecomm_store-service
 spec:
   type: LoadBalancer
   selector:
-   app: ecommstore
+   app: ecomm_store
   ports:
-   - port: 80
-     targetPort: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
 ...
