--- a/Deployment.yml
+++ b/Deployment.yml
@@ -2,34 +2,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: ecomm_store
+ name: ecomm-store
  labels:
-   app: ecomm_store
+   app: ecomm-store
 spec:
  replicas: 1
  selector:
    matchLabels:
-     app: ecomm_store
+     app: ecomm-store
  template:
   metadata:
-   name: ecomm_store
+   name: ecomm-store
    labels:
-     app: ecomm_store
+     app: ecomm-store
   spec:
     containers:
-    - name: ecomm_store
-      image: sanjayk062/ecomm_store:latest
+    - name: ecomm-store
+      image: sanjayk062/ecomm-store:latest
       ports:
       - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
- name: ecomm_store-service
+ name: ecomm-store-service
 spec:
   type: LoadBalancer
   selector:
-   app: ecomm_store
+   app: ecomm-store
   ports:
   - protocol: TCP
     port: 80
